--- a/TP_W24/bin/TP_W24.dll.config
+++ b/TP_W24/bin/TP_W24.dll.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=CryptoBD;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="CryptoBDEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CryptoBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CryptoBDEntities1" connectionString="metadata=res://*/Models.CryptoBD.csdl|res://*/Models.CryptoBD.ssdl|res://*/Models.CryptoBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CryptoBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CryptoBDEntities2" connectionString="metadata=res://*/Models.CryptoBD.csdl|res://*/Models.CryptoBD.ssdl|res://*/Models.CryptoBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CryptoBD;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -34,12 +35,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
