fix bug comment

--- a/TP_W24/TP_W24.csproj
+++ b/TP_W24/TP_W24.csproj
@@ -602,6 +602,7 @@
     <Content Include="Views\Comments\Edit.cshtml" />
     <Content Include="Views\Comments\Index.cshtml" />
     <Content Include="Views\Shared\AddComment.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
