--- a/TP_W24/TP_W24.csproj
+++ b/TP_W24/TP_W24.csproj
@@ -606,6 +606,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="img\PicUser\" />
     <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <ItemGroup>
